// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Snapshots renders a card with size 1 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(8.333333333333334% - 96px);
}

<div
  className="emotion-2"
  size={1}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 2 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(16.666666666666668% - 96px);
}

<div
  className="emotion-2"
  size={2}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 3 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(25% - 96px);
}

<div
  className="emotion-2"
  size={3}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 4 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(33.333333333333336% - 96px);
}

<div
  className="emotion-2"
  size={4}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 5 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(41.66666666666667% - 96px);
}

<div
  className="emotion-2"
  size={5}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 6 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(50% - 96px);
}

<div
  className="emotion-2"
  size={6}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 7 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(58.333333333333336% - 96px);
}

<div
  className="emotion-2"
  size={7}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 8 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(66.66666666666667% - 96px);
}

<div
  className="emotion-2"
  size={8}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 9 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(75% - 96px);
}

<div
  className="emotion-2"
  size={9}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 10 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(83.33333333333334% - 96px);
}

<div
  className="emotion-2"
  size={10}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 11 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(91.66666666666667% - 96px);
}

<div
  className="emotion-2"
  size={11}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with size 12 1`] = `
.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
  width: calc(100% - 96px);
}

<div
  className="emotion-2"
  size={12}
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders a card with title 1`] = `
.emotion-2 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
}

.emotion-1 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-0 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  color: #323232;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-bottom: 24px;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  >
    Card Title
  </div>
  <div
    className="emotion-1"
  >
    Card
  </div>
</div>
`;

exports[`Card Snapshots renders as expected 1`] = `
.emotion-1 {
  box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.1);
  border: 1px solid #ced3d9;
  border-radius: 3px;
  margin: 16px 0;
  padding: 32px;
}

.emotion-0 {
  font-size: 14px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Card
  </div>
</div>
`;
